feat(extended-uportal-header): home button configuration

--- a/@uportal/extended-uportal-header/samples/extended-uportal-header.html
+++ b/@uportal/extended-uportal-header/samples/extended-uportal-header.html
@@ -38,6 +38,8 @@
         "color":"#057436"
       }'
       icon-type="four-square"
+      return-home-title="retour à l'accueil"
+      return-home-target="_self"
       debug
     >
       <div slot="not-loaded">NOT LOADED</div>
