chore(esco-content-menu): update menu component

--- a/@uportal/extended-uportal-header/samples/extended-uportal-header.html
+++ b/@uportal/extended-uportal-header/samples/extended-uportal-header.html
@@ -37,9 +37,9 @@
         "iconOpacity": 1,
         "color":"#057436"
       }'
-      icon-type="four-square"
       return-home-title="retour à l'accueil"
       return-home-target="_self"
+      icon-type="nine-square"
       debug
     >
       <div slot="not-loaded">NOT LOADED</div>
