feat(extended-uportal-header): get service name by fname

--- a/@uportal/extended-uportal-header/samples/extended-uportal-header.html
+++ b/@uportal/extended-uportal-header/samples/extended-uportal-header.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     <extended-uportal-header
+      fname="demo"
       debug
     >
       <div slot="not-loaded">NOT LOADED</div>
